
[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "queuectl"
version = "0.1.0"
description = "CLI job queue with SQLite, retries, and DLQ"
authors = [{name="you"}]
requires-python = ">=3.9"
dependencies = [
  "typer>=0.9",
  "rich>=13.0"
]

[project.scripts]
queuectl = "queuectl.cli:main"
